force-app/main/default/objects/Camping_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the camping item</description>
    <label>Description</label>
    <type>TextArea</type>
    <length>1000</length>
</CustomField>