force-app/main/default/objects/Camping_Item__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <description>URL to the image of the camping item</description>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>